# informatics_club

./: README.md  wordcloud.ipynb
apps/cellrank2exp/: PROTOCOL_TEACHING_BLUEPRINT.md  README.md  environment.yml  index.html  setup.cfg  types.ts
apps/cellrank2exp/components/: Interface.tsx
cellrank-2-explorer/: .gitignore  App.tsx  README.md  environment.yml  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
cellrank-2-explorer/cellrank2exp/: __init__.py  cli.py
cellrank-2-explorer/components/: DataStructureAtlas.tsx  Explorer3D.tsx  FormulaLab.tsx  Interface.tsx  ProtocolWorkflow.tsx  PythonKernelInputs.tsx  Visuals.tsx
cellrank-2-explorer/utils/: simulation.ts
sctalk/03_cellrank2/: ~$03_SCTALK_Feb18_2026.pptx
sctalk/sctalk3_cellrank2/pdf/: 03_CellRank_protool.txt  cellrank_protocol.txt
sctalk3_cellrank2/: .gitignore  cellrank2_tutorial.ipynb  environment.yml
workshop/cellrank2/: .gitignore  cellrank2_tutorial.ipynb
