[metadata]
name = cellrank2exp
version = 0.1.0
description = CLI to run the cellrank-2-explorer app
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    cellrank2exp = cellrank2exp.cli:main

[options.packages.find]
include =
    cellrank2exp*
